Kube/deployment/hello-php.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: app-dev
  name: aks-hellophp-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:     
      app.kubernetes.io/name: aks-hellophp
      app.kubernetes.io/instance: app-dev
      app.kubernetes.io/part-of: aks-services
      app.kubernetes.io/managed-by: azure-devops
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aks-hellophp
        app.kubernetes.io/instance: app-dev
        app.kubernetes.io/version: "#{Release.Artifacts.aks.BuildNumber}#"    
        app.kubernetes.io/part-of: aks-services
        app.kubernetes.io/managed-by: azure-devops
    spec:
      containers:
      - name: aks-hellophp
        image: anowar.azurecr.io/aks-helloworldphp:#{Release.Artifacts.aks.BuildNumber}#
        ports:
        - containerPort: 80
        imagePullPolicy: Always
      imagePullSecrets:
      - name: acr-auth
---
apiVersion: v1
kind: Service
metadata:
  namespace: app-dev
  name: aks-hellophp-service
  labels:
    app.kubernetes.io/name: aks-hellophp
    app.kubernetes.io/instance: app-dev
    app.kubernetes.io/version: "#{Release.Artifacts.aks.BuildNumber}#"    
    app.kubernetes.io/part-of: aks-services
    app.kubernetes.io/managed-by: azure-devops
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
  selector:
    app.kubernetes.io/name: aks-hellophp
    app.kubernetes.io/instance: app-dev
    app.kubernetes.io/version: "#{Release.Artifacts.aks.BuildNumber}#"    
    app.kubernetes.io/part-of: aks-services
    app.kubernetes.io/managed-by: azure-devops
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: app-dev
  name: aks-hellophp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx    
    nginx.org/server-snippets: "gzip on;"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
 tls:
  - hosts:
    - anowar.eastus.cloudapp.azure.com
  secretName: anowar-eastus-cloudapp-azure-com-staging
  rules:
  - host: anowar.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: aks-hellophp-service
          servicePort: 80
